# K-trine

./: LICENSE  README.md  dblp_edges_SIGMODlim6.txt
Data/: dblp_edges_KDDlim6.txt  ind_6-trussdblp_edges_KDDlim6.txt  ind_6-trussdblp_edges_SIGMODlim6.txt
Project/K-trine/effectiveness/: CMakeLists.txt
Project/K-trine/effectiveness/dataset/: _singleyelp_fans_core.txt  _singleyelp_fans_degree.txt  _singleyelp_fans_trine.txt  _singleyelp_fans_truss.txt  _singleyelp_review_core.txt  _singleyelp_review_degree.txt  _singleyelp_review_trine.txt  _singleyelp_review_truss.txt  init_.py
Project/K-trine/effectiveness/dataset/dblp_exchange/: 6-trussdblp_edges_SIGMODlim6.txt  README.txt  authors.py  cssd.py  dblp_rev.txt  ind_6-trussdblp_edges_KDDlim6.csv  ind_6-trussdblp_edges_SIGMODlim6.csv  ind_6-trussdblp_node_KDDlim6.csv  ind_6-trussdblp_node_SIGMODlim6.csv  reviewer.py
Project/K-trine/effectiveness/dataset/yelp_exchange/: reviewer.py  user.py
Project/K-trine/effectiveness/run/: Casestudy.cpp  Casestudy_v2.cpp  Chakins.cpp  ClusteringCoefficient.cpp  Density.cpp  max.cpp
Project/K-trine/effectiveness/src/: core.cpp  core.h  graph.h  trine.cpp  trine.h  trineplus.cpp  trineplus.h  truss.cpp  truss.h
Project/K-trine/effectiveness/test/: exp.h  gtest.cpp
Project/K-trine/insertion+_and_removal/: compile.sh  datamaker.cpp  defs.h  extcompile.sh  extcount.cpp  main.cpp  order.cpp  order.h  thebin.h  theheap.cpp  theheap.h  trine.cpp  trine.h
Project/K-trine/insertion_and_removal/: compile.sh  datamaker.cpp  extcount.cpp  graph.h  main.cpp  order.cpp  thebin.cpp  trine.cpp  trine.h
Project/K-trine/k-trine-compute/: CMakeLists.txt  do.sh
Project/K-trine/k-trine-compute/run/: main.cpp
Project/K-trine/k-trine-compute/src/: core.cpp  core.h  defs.h  trine.cpp  trine.h
Project/K-trine/k-trine-compute/test/: gtest.cpp
